Add segment/allocated/count metric